--- a/index.html
+++ b/index.html
@@ -7,25 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MDC Platform | Metal-Drug Complex</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <meta name="msvalidate.01" content="EBBE89AB64F8DBAA11EB33AF73EC39AF" />
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-6 text-center border-b border-gray-800">
     <div class="flex justify-center items-center mb-4">
-      <div class="flex justify-center items-center mb-4">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 400" class="w-64 h-auto">
-    <rect width="800" height="400" fill="transparent"/>
-    <g transform="translate(130, 115)">
-      <path d="M10,0 L150,86.6 L100,173.2 L0,173.2 L-50,86.6 L0,0 Z" fill="none" stroke="white" stroke-width="8"/>
-      <circle cx="50" cy="86.6" r="15" fill="white"/>
-      <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(30 50 86.6)"/>
-      <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(-30 50 86.6)"/>
-      <ellipse cx="50" cy="86.6" rx="70" ry="70" fill="none" stroke="white" stroke-width="5"/>
-      <circle cx="115" cy="50" r="8" fill="white"/>
-    </g>
-    <text x="300" y="225" font-family="Arial, sans-serif" font-size="80" font-weight="bold" fill="white">MetalDrug</text>
-  </svg>
-</div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 400" class="w-64 h-auto">
+        <rect width="800" height="400" fill="transparent"/>
+        <g transform="translate(130, 115)">
+          <path d="M10,0 L150,86.6 L100,173.2 L0,173.2 L-50,86.6 L0,0 Z" fill="none" stroke="white" stroke-width="8"/>
+          <circle cx="50" cy="86.6" r="15" fill="white"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(30 50 86.6)"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(-30 50 86.6)"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="70" fill="none" stroke="white" stroke-width="5"/>
+          <circle cx="115" cy="50" r="8" fill="white"/>
+        </g>
+        <text x="300" y="225" font-family="Arial, sans-serif" font-size="80" font-weight="bold" fill="white">MetalDrug</text>
+      </svg>
     </div>
     <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
     <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
@@ -34,6 +31,19 @@
       <a href="#contact" class="text-blue-400 hover:underline">Partner With Us</a>
     </div>
   </header>
+
+  <section class="p-6 max-w-4xl mx-auto">
+    <h2 class="text-2xl font-semibold text-white mb-2">Explore MDC Platform Pages</h2>
+    <ul class="list-disc list-inside text-blue-400">
+      <li><a href="library.html" class="hover:underline">MDC Library</a></li>
+      <li><a href="publications.html" class="hover:underline">Publications & Reviewer Access</a></li>
+      <li><a href="case-studies.html" class="hover:underline">Case Studies</a></li>
+      <li><a href="licensing-opportunities.html" class="hover:underline">Licensing Opportunities</a></li>
+      <li><a href="clinical-pipeline.html" class="hover:underline">Clinical Pipeline</a></li>
+      <li><a href="nda-review.html" class="hover:underline">Request Publication Review (NDA)</a></li>
+      <li><a href="contact.html" class="hover:underline">Contact Page</a></li>
+    </ul>
+  </section>
 
   <section class="p-6 max-w-4xl mx-auto">
     <h2 class="text-xl font-semibold text-white mb-2">The Problem</h2>
@@ -49,7 +59,7 @@
     </ul>
   </section>
 
-  <section id="platform" class="p-6 max-w-4xl mx-auto">
+  <section class="p-6 max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold text-white mb-2">The MDC Framework</h2>
     <p class="text-gray-400 mb-4">MDC stands for Metal-Drug Complex - a novel therapeutic architecture based on selective metal-ligand dynamics. These complexes:</p>
     <ul class="list-disc list-inside text-gray-400 mb-4">
@@ -57,9 +67,9 @@
       <li>Enable multivalent molecular interactions</li>
       <li>Enhance tissue-specific targeting and bioactivity</li>
     </ul>
-    <p class="text-gray-400">MDC operates at the intersection of coordination chemistry and programmable biology. It is not just a drug - it's a system of logic built from atoms.</p>
-    <h3 class="text-xl font-semibold text-white mt-6 mb-2">Key Features</h3>
-    <ul class="list-disc list-inside text-gray-400">
+    <p class="text-gray-400 mb-6">MDC operates at the intersection of coordination chemistry and programmable biology. It is not just a drug - it's a system of logic built from atoms.</p>
+    <h3 class="text-xl font-semibold text-white mt-4 mb-2">Key Features</h3>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
       <li>Ligand-controlled activity switching</li>
       <li>Scaffold flexibility across molecular targets</li>
       <li>Built for RNA, protein, or receptor-level modulation via chelation, structural interference, and signal amplification</li>
@@ -68,69 +78,42 @@
 
   <section class="p-6 max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold text-white mb-2">Strategic Use Cases</h2>
-    <ul class="list-disc list-inside text-gray-400">
+    <ul class="list-disc list-inside text-gray-400 mb-4">
       <li><strong>Antiviral Constructs</strong> – Disrupt viral replication or capsid assembly</li>
       <li><strong>RNA Regulatory Interfaces</strong> – Influence RNA folding, translation, or decay</li>
       <li><strong>Neurochemical Modulators</strong> – Cross BBB to modulate inflammation or ion channels</li>
     </ul>
-    <p class="mt-2 text-gray-400">Custom complex design is available under NDA, including tunable metal cores (Zn, Cu, Fe), ligand customization, and scaffold variation.</p>
+    <p class="text-gray-400">Custom complex design is available under NDA, including tunable metal cores (Zn, Cu, Fe), ligand customization, and scaffold variation.</p>
   </section>
 
   <section class="p-6 max-w-4xl mx-auto">
     <h2 class="text-2xl font-semibold text-white mb-2">Partner With Us</h2>
-    <p class="text-gray-400 mb-2">MDC is entering deployment with preclinical validation, in vitro assays, and compound profiling underway. We engage partners in:</p>
-    <ul class="list-disc list-inside text-gray-400">
+    <p class="text-gray-400 mb-4">MDC is entering deployment with preclinical validation, in vitro assays, and compound profiling underway. We engage partners in:</p>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
       <li>Molecular and RNA chemistry</li>
       <li>Advanced drug delivery</li>
       <li>Synthetic and programmable biology</li>
     </ul>
-    <h3 class="text-xl font-semibold text-white mt-6 mb-2">Licensing & Future Security</h3>
-    <ul class="list-disc list-inside text-gray-400">
+    <h3 class="text-xl font-semibold text-white mt-4 mb-2">Licensing & Future Security</h3>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
       <li>Exclusive licensing per drug</li>
       <li>Milestone-based agreements</li>
       <li>MDC-as-a-Service for biotech R&D labs</li>
     </ul>
-    <p class="text-gray-400 mt-2">Advanced intelligence modules enable:
-      <ul class="list-disc list-inside">
-        <li>Molecular digital twins with anomaly detection</li>
-        <li>Entropy-aware safeguards against cross-reactivity</li>
-        <li>Tamper-proof microfoundry logic to prevent unauthorized MDC replication</li>
-      </ul>
-    </p>
-    <p class="text-blue-400 italic mt-2">Programmable molecules require programmable defense. Our infrastructure ensures each MDC remains benevolent, traceable, and fail-safe.</p>
+    <p class="text-gray-400 mb-2">Advanced intelligence modules enable:</p>
+    <ul class="list-disc list-inside text-gray-400 mb-4">
+      <li>Molecular digital twins with anomaly detection</li>
+      <li>Entropy-aware safeguards against cross-reactivity</li>
+      <li>Tamper-proof microfoundry logic to prevent unauthorized MDC replication</li>
+    </ul>
+    <p class="text-blue-400 italic">Programmable molecules require programmable defense. Our infrastructure ensures each MDC remains benevolent, traceable, and fail-safe.</p>
   </section>
 
-  <section id="contact" class="p-6 max-w-2xl mx-auto">
-    <h2 class="text-2xl font-semibold text-white mb-2">Secure Contact Form</h2>
-    <form action="https://getform.io/f/bkkyvkrb" method="POST" class="space-y-4">
-      <input type="hidden" name="_redirect" value="https://metaldrug.com/KT-MetalDrug-NDA.pdf" />
-      <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
-      <input type="text" name="organization" placeholder="Affiliation or Organization" class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
-      <input type="email" name="email" placeholder="Email Address" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
-      <textarea name="message" placeholder="Purpose of Inquiry" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded h-32"></textarea>
-      <label class="inline-flex items-center text-gray-400">
-        <input type="checkbox" name="nda" class="mr-2"> Request NDA (auto-send after submission)
-      </label>
-      <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Submit</button>
-    <button type="button" onclick="window.location.href='KT-MetalDrug-NDA.pdf'" class="bg-gray-700 hover:bg-gray-600 text-white px-4 py-2 rounded">Download NDA</button>
-      <script>
-        document.querySelector("form").addEventListener("submit", function (e) {
-          const nda = document.querySelector("input[name='nda']").checked;
-          if (nda) {
-            setTimeout(() => {
-              window.location.href = 'KT-MetalDrug-NDA.pdf';
-            }, 300);
-          }
-        });
-      </script>
-      </form>
-  </section>
-
-  <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm">
-    © 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is a Kunfirm Biotech Initiative.
+  <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm mt-10">
+    &copy; 2025 Kunfirm Technologies. All Rights Reserved. MDC Platform is a Kunfirm Biotech Initiative.
     <div class="mt-2 space-x-4">
       <a href="https://www.linkedin.com/company/metaldrug" target="_blank" class="hover:underline">LinkedIn</a>
-      <a href="info@metaldrug.com" class="hover:underline">Contact</a>
+      <a href="contact.html" class="hover:underline">Contact</a>
       <a href="#" class="hover:underline">Privacy</a>
     </div>
   </footer>
