--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2 class="text-2xl font-semibold text-white mb-2">Explore MDC Platform Pages</h2>
     <ul class="list-disc list-inside text-blue-400">
       <li><a href="library.html" class="hover:underline">MDC Library</a></li>
-      <li><a href="publications.html" class="hover:underline">Publications & Reviewer Access</a></li>
+      <li><a href="Publications.html" class="hover:underline">Publications & Reviewer Access</a></li>
       <li><a href="case-studies.html" class="hover:underline">Case Studies</a></li>
       <li><a href="licensing-opportunities.html" class="hover:underline">Licensing Opportunities</a></li>
       <li><a href="clinical-pipeline.html" class="hover:underline">Clinical Pipeline</a></li>
