--- a/licensing-opportunities.html
+++ b/licensing-opportunities.html
@@ -19,25 +19,25 @@
       <div class="bg-gray-900 p-6 rounded-lg border border-gray-800 hover:border-green-500 transition">
         <h2 class="text-xl font-semibold text-white">Zn²⁺-Ivermectin (Antiviral)</h2>
         <p class="text-gray-400 mt-2">Optimized for enhanced viral protein affinity and oral bioavailability. Preclinical insights support potential in respiratory and cytoplasmic-targeted viruses.</p>
-        <a href="#" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
+        <a href="licensing-form.html?compound=Zn²⁺-Ivermectin" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
       </div>
 
       <div class="bg-gray-900 p-6 rounded-lg border border-gray-800 hover:border-green-500 transition">
         <h2 class="text-xl font-semibold text-white">Cu²⁺-Histidine (Neuroinflammation)</h2>
         <p class="text-gray-400 mt-2">ROS-responsive agent with anti-inflammatory properties and metal-assisted delivery timing. Target: oxidative stress conditions in neurodegenerative pathways.</p>
-        <a href="#" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
+        <a href="licensing-form.html?compound=Cu²⁺-Histidine" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
       </div>
 
       <div class="bg-gray-900 p-6 rounded-lg border border-gray-800 hover:border-green-500 transition">
         <h2 class="text-xl font-semibold text-white">Ru⁴⁺-Doxorubicin (Oncology)</h2>
         <p class="text-gray-400 mt-2">Designed for selective tumor activation in acidic microenvironments. Enables logic-gated toxicity with metal-mediated stability.</p>
-        <a href="#" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
+        <a href="licensing-form.html?compound=Ru⁴⁺-Doxorubicin" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
       </div>
 
       <div class="bg-gray-900 p-6 rounded-lg border border-gray-800 hover:border-green-500 transition">
         <h2 class="text-xl font-semibold text-white">Bi³⁺-Minocycline (Spinal/CNS Repair)</h2>
         <p class="text-gray-400 mt-2">MDC for neuroprotection, axonal regeneration, and trauma-targeted delivery. Currently under evaluation for spinal cord injury support.</p>
-        <a href="#" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
+        <a href="licensing-form.html?compound=Bi³⁺-Minocycline" class="inline-block mt-4 text-green-400 underline">Submit Licensing Interest</a>
       </div>
     </div>
 
