--- a/clinical-pipeline.html
+++ b/clinical-pipeline.html
@@ -36,7 +36,7 @@
           <td class="px-4 py-2 border border-gray-700">Neuroinflammation</td>
           <td class="px-4 py-2 border border-gray-700">ROS-triggered timed release</td>
           <td class="px-4 py-2 border border-gray-700">Model Validation</td>
-          <td class="px-4 py-2 border border-gray-700">Kunfirm + UTexas CEM</td>
+          <td class="px-4 py-2 border border-gray-700">Kunfirm Biotech + UT</td>
         </tr>
         <tr class="hover:bg-gray-800">
           <td class="px-4 py-2 border border-gray-700">Ru⁴⁺-Doxorubicin</td>
