--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
     <div class="mt-4 space-x-4">
       <a href="#platform" class="text-blue-400 hover:underline">Explore the Platform</a>
-      <a href="#contact" class="text-blue-400 hover:underline">Partner With Us</a>
+      <a href="who-we-serve.html" class="text-blue-400 hover:underline">Who We Serve</a>
+      <a href="contact.html" class="text-blue-400 hover:underline">Partner With Us</a>
     </div>
   </header>
 
