--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1 class="text-3xl font-bold text-white">Redefining Drug Potential Through Molecular Synergy</h1>
     <p class="text-gray-400 mt-2">A next-generation platform using metal coordination chemistry to enhance, transform, and license optimized therapeutics.</p>
     <div class="mt-4 space-x-4">
-      <a href="#platform" class="text-blue-400 hover:underline">Explore the Platform</a>
+      <a href="our-tech.html" class="text-blue-400 hover:underline">Explore the Platform</a>
       <a href="who-we-serve.html" class="text-blue-400 hover:underline">Who We Serve</a>
       <a href="contact.html" class="text-blue-400 hover:underline">Partner With Us</a>
     </div>
