--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <li><a href="licensing-opportunities.html" class="hover:underline">Licensing Opportunities</a></li>
       <li><a href="clinical-pipeline.html" class="hover:underline">Clinical Pipeline</a></li>
       <li><a href="nda-review.html" class="hover:underline">Request Publication Review (NDA)</a></li>
+      <li><a href="moleculogic.html" class="hover:underline text-blue-400">Moleculogic (AI Molecular Design)</a></li>
       <li><a href="contact.html" class="hover:underline">Contact Page</a></li>
     </ul>
   </section>
