--- a/moleculogic.html
+++ b/moleculogic.html
@@ -8,61 +8,100 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
-  <header class="p-6 text-center border-b border-gray-800">
-    <h1 class="text-4xl font-bold text-white">Moleculogic</h1>
-    <p class="text-gray-400 mt-2 max-w-3xl mx-auto">MDC Discovery. Intelligent Molecule Modeling. Tiered Access. Built for the future of programmable medicine.</p>
+  <header class="p-8 border-b border-gray-800 text-center">
+    <h1 class="text-4xl font-extrabold text-white tracking-wide">Moleculogic</h1>
+    <p class="text-gray-400 mt-4 max-w-3xl mx-auto text-lg">
+      An advanced molecular reasoning engine developed by Kunfirm Technologies (KT) for AI-assisted compound design, logic-based simulation, and secure therapeutic modeling.
+    </p>
   </header>
 
-  <section class="p-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl font-semibold text-white mb-4">Tiered Access Framework</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-      <!-- Tier 0 -->
-      <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-blue-500">
-        <h3 class="text-xl font-bold text-white">Tier 0: Preview Mode</h3>
-        <p class="text-gray-400 mt-2">Open tools for sketching, analysis, and exploring MDC logic without account creation.</p>
-        <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
-          <li>Molecule viewer & builder</li>
-          <li>Public compound explorer</li>
-          <li>Optional email for early alerts</li>
-        </ul>
-      </div>
-      <!-- Tier 1 -->
-      <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-green-500">
-        <h3 class="text-xl font-bold text-white">Tier 1: Scientific Sandbox</h3>
-        <p class="text-gray-400 mt-2">Submit an NDA to access MDC prediction and SEI-lite suggestions.</p>
-        <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
-          <li>Ligand screening engine</li>
-          <li>SEI-guided compatibility scores</li>
-          <li>NDA-required access</li>
-        </ul>
-      </div>
-      <!-- Tier 2 -->
-      <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-yellow-500">
-        <h3 class="text-xl font-bold text-white">Tier 2: MDC Architect</h3>
-        <p class="text-gray-400 mt-2">Deep integration with MDC models for pharma & biotech partners.</p>
-        <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
-          <li>Custom MDC generation</li>
-          <li>Metal-ligand combinatorics</li>
-          <li>GitHub-based secure review</li>
-        </ul>
-      </div>
-      <!-- Tier 3 -->
-      <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-red-500">
-        <h3 class="text-xl font-bold text-white">Tier 3: Enterprise Node</h3>
-        <p class="text-gray-400 mt-2">Private SEI-integrated systems for regulated or government use.</p>
-        <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
-          <li>Custom on-premise nodes</li>
-          <li>Biosecurity & AI oversight</li>
-          <li>Enterprise-grade MDC logic</li>
-        </ul>
+  <section class="p-8 max-w-5xl mx-auto space-y-12">
+    <div>
+      <h2 class="text-2xl font-semibold text-white mb-2">What is Moleculogic?</h2>
+      <p class="text-gray-400 text-lg">
+        Moleculogic is a logic-first AI framework for molecular design and validation. Rooted in Rational Constructivism and coordinated with MDC protocols, it provides dynamic compound synthesis suggestions, predictive toxicology, and encrypted twin creation for regulatory alignment.
+      </p>
+    </div>
+
+    <div>
+      <h2 class="text-2xl font-semibold text-white mb-2">Key Capabilities</h2>
+      <ul class="list-disc list-inside text-gray-400 space-y-1 text-lg">
+        <li>AI-Guided Molecular Assembly (MGMA Protocols)</li>
+        <li>Integration with MDC discovery and tuning modules</li>
+        <li>Multi-tiered reasoning: from ligand scanning to redox modeling</li>
+        <li>Metabolic logic path prediction and interaction warning</li>
+        <li>Encrypted digital twin generation for pharma traceability</li>
+      </ul>
+    </div>
+
+    <div>
+      <h2 class="text-2xl font-semibold text-white mb-2">How to Use</h2>
+      <ol class="list-decimal list-inside text-gray-400 space-y-2 text-lg">
+        <li>Access the Moleculogic dashboard (via KT Secure Partner Portal)</li>
+        <li>Verify tier-level access using your organization credentials</li>
+        <li>Submit a drug scaffold, coordination hypothesis, or design goal</li>
+        <li>Receive validated suggestions and logic trees for synthesis</li>
+        <li>Export output or proceed to MDC complexation</li>
+      </ol>
+    </div>
+
+    <div>
+      <h2 class="text-2xl font-semibold text-white mb-2">Tiered Access Framework</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-blue-500">
+          <h3 class="text-xl font-bold text-white">Tier 0: Preview Mode</h3>
+          <p class="text-gray-400 mt-2">Open tools for sketching, analysis, and exploring MDC logic without account creation.</p>
+          <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
+            <li>Molecule viewer & builder</li>
+            <li>Public compound explorer</li>
+            <li>Optional email for early alerts</li>
+          </ul>
+        </div>
+        <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-green-500">
+          <h3 class="text-xl font-bold text-white">Tier 1: Scientific Sandbox</h3>
+          <p class="text-gray-400 mt-2">Submit an NDA to access MDC prediction and SEI-lite suggestions.</p>
+          <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
+            <li>Ligand screening engine</li>
+            <li>SEI-guided compatibility scores</li>
+            <li>NDA-required access</li>
+          </ul>
+        </div>
+        <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-yellow-500">
+          <h3 class="text-xl font-bold text-white">Tier 2: MDC Architect</h3>
+          <p class="text-gray-400 mt-2">Deep integration with MDC models for pharma & biotech partners.</p>
+          <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
+            <li>Custom MDC generation</li>
+            <li>Metal-ligand combinatorics</li>
+            <li>GitHub-based secure review</li>
+          </ul>
+        </div>
+        <div class="bg-gray-900 p-4 rounded border border-gray-800 hover:border-red-500">
+          <h3 class="text-xl font-bold text-white">Tier 3: Enterprise Node</h3>
+          <p class="text-gray-400 mt-2">Private SEI-integrated systems for regulated or government use.</p>
+          <ul class="text-sm text-gray-400 list-disc list-inside mt-2">
+            <li>Custom on-premise nodes</li>
+            <li>Biosecurity & AI oversight</li>
+            <li>Enterprise-grade MDC logic</li>
+          </ul>
+        </div>
       </div>
     </div>
-  </section>
 
-  <section class="p-6 max-w-5xl mx-auto text-center mt-10">
-    <h2 class="text-2xl font-semibold text-white mb-2">Ready to begin?</h2>
-    <p class="text-gray-400 mb-4">Submit your request to access Moleculogic at the tier appropriate to your institution or research needs.</p>
-    <a href="nda-review.html" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-2 rounded">Request Access</a>
+    <div>
+      <h2 class="text-2xl font-semibold text-white mb-2">Security & Ethics</h2>
+      <p class="text-gray-400 text-lg">
+        Moleculogic is governed by KT’s Advanced Intelligence Framework. Every molecular suggestion is gated by logic reproducibility, ethical bounds, and sandboxed in risk-aware simulation containers. It is not a generator—it is a molecular reasoning protocol.
+      </p>
+    </div>
+
+    <div class="text-center">
+      <h2 class="text-2xl font-semibold text-white mb-4">Ready to begin?</h2>
+      <p class="text-gray-400 mb-4">Submit your request to access Moleculogic at the tier appropriate to your institution or research needs.</p>
+      <a href="nda-review.html" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-2 rounded">Request Access</a>
+      <p class="text-blue-400 mt-4">
+        View Tier Details: <a href="https://metaldrug.com/moleculogic.html" class="underline hover:text-blue-300">https://metaldrug.com/moleculogic.html</a>
+      </p>
+    </div>
   </section>
 
   <footer class="text-center p-6 border-t border-gray-800 text-gray-600 text-sm mt-10">
