--- a/moleculogic.html
+++ b/moleculogic.html
@@ -9,6 +9,20 @@
 </head>
 <body class="bg-gray-950 text-gray-200 font-mono">
   <header class="p-8 border-b border-gray-800 text-center">
+    <div class="flex justify-center items-center mb-6">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 400" class="w-64 h-auto">
+        <rect width="800" height="400" fill="transparent"/>
+        <g transform="translate(130, 115)">
+          <path d="M10,0 L150,86.6 L100,173.2 L0,173.2 L-50,86.6 L0,0 Z" fill="none" stroke="white" stroke-width="8"/>
+          <circle cx="50" cy="86.6" r="15" fill="white"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(30 50 86.6)"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="25" fill="none" stroke="white" stroke-width="5" transform="rotate(-30 50 86.6)"/>
+          <ellipse cx="50" cy="86.6" rx="70" ry="70" fill="none" stroke="white" stroke-width="5"/>
+          <circle cx="115" cy="50" r="8" fill="white"/>
+        </g>
+        <text x="300" y="225" font-family="Arial, sans-serif" font-size="80" font-weight="bold" fill="white">MetalDrug</text>
+      </svg>
+    </div>
     <h1 class="text-4xl font-extrabold text-white tracking-wide">Moleculogic</h1>
     <p class="text-gray-400 mt-4 max-w-3xl mx-auto text-lg">
       An advanced molecular reasoning engine developed by Kunfirm Technologies (KT) for AI-assisted compound design, logic-based simulation, and secure therapeutic modeling.
