--- a/moleculogic.html
+++ b/moleculogic.html
@@ -113,7 +113,7 @@
       <p class="text-gray-400 mb-4">Submit your request to access Moleculogic at the tier appropriate to your institution or research needs.</p>
       <a href="nda-review.html" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-2 rounded">Request Access</a>
       <p class="text-blue-400 mt-4">
-        View Tier Details: <a href="https://metaldrug.com/moleculogic.html" class="underline hover:text-blue-300">https://metaldrug.com/moleculogic.html</a>
+        View Tier Details: <a href="https://metaldrug.com/moleculogic-preview.html" class="underline hover:text-blue-300">Moleculogic Preview Mode</a>
       </p>
     </div>
   </section>
