--- a/moleculogic-preview.html
+++ b/moleculogic-preview.html
@@ -24,7 +24,7 @@
         <text x="300" y="225" font-family="Arial, sans-serif" font-size="80" font-weight="bold" fill="white">MetalDrug</text>
       </svg>
     </div>
-    <h1 class="text-4xl font-extrabold text-white tracking-wide">Moleculogic</h1>
+    <h1 class="text-4xl font-extrabold text-white tracking-wide">Moleculogic Preview</h1>
     <p class="text-gray-400 mt-4 max-w-3xl mx-auto text-lg">
       An advanced molecular reasoning engine developed by Kunfirm Technologies (KT) for AI-assisted compound design, logic-based simulation, and secure therapeutic modeling.
     </p>
