--- a/nda-review.html
+++ b/nda-review.html
@@ -15,7 +15,7 @@
   </header>
 
   <section class="p-6 max-w-2xl mx-auto">
-    <form action="https://getform.io/f/bkkyvkrb" method="POST" class="space-y-4">
+    <form action="https://api.metaldrug.com/github/nda-request" method="POST" class="space-y-4">
       <input type="hidden" name="_redirect" value="https://metaldrug.com/KT-MetalDrug-NDA.pdf" />
       <input type="text" name="name" placeholder="Full Name" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
       <input type="email" name="email" placeholder="Email Address" required class="w-full p-2 bg-gray-900 border border-gray-700 rounded" />
